--- a/topics.Rmd
+++ b/topics.Rmd
@@ -48,7 +48,7 @@ create_footer()
 | - | W 9/20 | 2.6 Differentiability | Differentiability<br>[[Handout]](topics/2.6-differentiability/2.6 Differentiability.pdf){target="_blank"} | Due: Section 2.5 | - | Pgs. 123-126 [CSV] |
 | - | Th 9/21 | Lab 2: Corona Virus Cases | - | - | Assigned: Lab 2 | - |
 | - | F 9/22 | **Proficiency Quiz<br>D1\*, D2** | - | Due: Section 2.6 | - | - |
-| **5** | M 9/25 | 3.1 Powers and Polynomials | TBA | - | - | Pgs. 130-136 [CSV] |
+| **5** | M 9/25 | 3.1 Powers and Polynomials | Derivatives of Polynomials<br>[[Handout]](topics/3.1-powers-and-polynomials/3.1 Derivatives of Polynomials.pdf){target="_blank"} | - | - | Pgs. 130-136 [CSV] |
 | - | W 9/27 | Review: Exponent Properties | TBA | Due: Section 3.1 | - | - |
 | - | Th 9/28 | 3.2 The Exponential Function | TBA | - | - | Pgs. 140-142 [CSV] |
 | - | F 9/29 | **Proficiency Quiz<br>D1\* (2nd), D3** | - | Due Exponent Review | **Due: Lab 2** | - |
