--- a/topics.Rmd
+++ b/topics.Rmd
@@ -33,40 +33,40 @@ create_footer()
 | **Week** | **Day** | **Topic** | **Activity** | **Homework** | **Lab** | **Reading** |
 |---|---|---|---|---|---|---|
 | **1** | M 8/28 | Introduction & Orientation | Function Placemats | - | Assigned: Lab 0 | Syllabus |
-| - | W 8/30 | 1.7 Limits and Continuity | What's up with these functions?<br>[[Handout]](topics/1.7-limits-and-continuity/1.7_Limits_F23.pdf){target="_blank"}<br>[[Desmos]](https://student.desmos.com/activitybuilder/student-greeting/64ef88678586d2895a2aa247){target="_blank"} | Due: Precalculus Diagnostic Quiz | - | Pgs. 58-63 [CSV] |
-| - | Th 8/31 | 1.8 Extending the Idea of a Limit | Limits and Continuity<br>[[Handout]](topics/1.8-limits-and-continuity/11.8_Limits_F23.pdf){target="_blank"}<br>[[Desmos]](https://student.desmos.com/activitybuilder/student-greeting/64ef88678586d2895a2aa247){target="_blank"} | - | - | Pgs. 67-72 [CSV] |
-| - | F 9/1 | 1.9 Limits and Algebra | Computing Limits<br>[[Handout]](topics/1.9-limits-and-algebra/1_9Limits.pdf){target="_blank"}<br>[[Desmos]](https://student.desmos.com/activitybuilder/student-greeting/64ef88678586d2895a2aa247){target="_blank"} | Due: Section 1.7 | - | Pgs. 75-80 [CSV] |
-| **2** | M 9/4 | 2.1 Measuring Speed | How do we measure speed?<br>[[Handout]](topics/2.1-measuring-speed/2.1 Speed.pdf){target="_blank"}<br>[[Desmos]](https://student.desmos.com/activitybuilder/student-greeting/64f545408b96bd2220eedfc1){target="_blank"} | Due: Section 1.8 | - | Pgs. 84-88 [CSV] |
-| - | W 9/6 | 2.2 Derivative at a Point | Derivative at a Point<br>[[Handout]](topics/2.2-derivative-at-a-point/2.2 Derivative.pdf){target="_blank"}<br>[[Desmos]](https://student.desmos.com/activitybuilder/student-greeting/64f8c7741f18f956129bd287){target="_blank"} | Due: Section 1.9 | - | Pgs. 91-95 [CSV] |
+| - | W 8/30 | [1.7 Limits and Continuity](class-notes/1.7 Limits and Continuity.pdf){target="_blank"} | What's up with these functions?<br>[[Handout]](topics/1.7-limits-and-continuity/1.7_Limits_F23.pdf){target="_blank"}<br>[[Desmos]](https://student.desmos.com/activitybuilder/student-greeting/64ef88678586d2895a2aa247){target="_blank"} | Due: Precalculus Diagnostic Quiz | - | Pgs. 58-63 [CSV] |
+| - | Th 8/31 | [1.8 Extending the Idea of a Limit](class-notes/1.8 Extending the Idea of a Limit.pdf){target="_blank"} | Limits and Continuity<br>[[Handout]](topics/1.8-limits-and-continuity/11.8_Limits_F23.pdf){target="_blank"}<br>[[Desmos]](https://student.desmos.com/activitybuilder/student-greeting/64ef88678586d2895a2aa247){target="_blank"} | - | - | Pgs. 67-72 [CSV] |
+| - | F 9/1 | [1.9 Limits and Algebra](class-notes/1.9 Limits and Algebra.pdf){target="_blank"} | Computing Limits<br>[[Handout]](topics/1.9-limits-and-algebra/1_9Limits.pdf){target="_blank"}<br>[[Desmos]](https://student.desmos.com/activitybuilder/student-greeting/64ef88678586d2895a2aa247){target="_blank"} | Due: Section 1.7 | - | Pgs. 75-80 [CSV] |
+| **2** | M 9/4 | [2.1 Measuring Speed](class-notes/2.1 Measuring Speed.pdf){target="_blank"} | How do we measure speed?<br>[[Handout]](topics/2.1-measuring-speed/2.1 Speed.pdf){target="_blank"}<br>[[Desmos]](https://student.desmos.com/activitybuilder/student-greeting/64f545408b96bd2220eedfc1){target="_blank"} | Due: Section 1.8 | - | Pgs. 84-88 [CSV] |
+| - | W 9/6 | [2.2 Derivative at a Point](class-notes/2.2 Derivative at a Point.pdf){target="_blank"} | Derivative at a Point<br>[[Handout]](topics/2.2-derivative-at-a-point/2.2 Derivative.pdf){target="_blank"}<br>[[Desmos]](https://student.desmos.com/activitybuilder/student-greeting/64f8c7741f18f956129bd287){target="_blank"} | Due: Section 1.9 | - | Pgs. 91-95 [CSV] |
 | - | Th 9/7 | Lab 1: Limits and Continuity | - | - | Assigned: Lab 1 | - |
 | - | F 9/8 | **Proficiency Quiz<br>L1, L2\*** | - | Due: Section 2.1 | **Due: Lab 0** | - |
-| **3** | M 9/11 | 2.3 Derivative Function Preview | Derivative Function Preview<br>[[Handout]](topics/2.3-derivative-function-preview/2.3 Derivative Function Preview.pdf){target="_blank"}<br>[[Desmos]](https://student.desmos.com/activitybuilder/student-greeting/64fe787caaf2700e78da672b){target="_blank"} | Due: Section 2.2 | - | Pgs. 99-104 [CSV] |
-| - | W 9/13 | 2.3 Derivative Function | The Derivative Function<br>[[Handout]](topics/2.3-derivative-function/2.3 Derivative Function.pdf){target="_blank"}<br>[[Desmos]](https://student.desmos.com/activitybuilder/student-greeting/64fe7f73f0257dc5eed274d4){target="_blank"} | - | - | - |
-| - | Th 9/14 | 2.4 Interpreting the Derivative | Interpretations of the Derivative<br>[[Handout]](topics/2.4-interpreting-the-derivative/2.4 Interpreting the Derivative.pdf){target="_blank"}<br>[[Desmos]](https://student.desmos.com/activitybuilder/student-greeting/64fe7f73f0257dc5eed274d4){target="_blank"} | - |  | Pgs. 108-110 [CSV] |
+| **3** | M 9/11 | [2.3 Derivative Function Preview](class-notes/2.3 Derivative Function Preview.pdf){target="_blank"} | Derivative Function Preview<br>[[Handout]](topics/2.3-derivative-function-preview/2.3 Derivative Function Preview.pdf){target="_blank"}<br>[[Desmos]](https://student.desmos.com/activitybuilder/student-greeting/64fe787caaf2700e78da672b){target="_blank"} | Due: Section 2.2 | - | Pgs. 99-104 [CSV] |
+| - | W 9/13 | [2.3 Derivative Function](class-notes/2.3 Derivative Function.pdf){target="_blank"} | The Derivative Function<br>[[Handout]](topics/2.3-derivative-function/2.3 Derivative Function.pdf){target="_blank"}<br>[[Desmos]](https://student.desmos.com/activitybuilder/student-greeting/64fe7f73f0257dc5eed274d4){target="_blank"} | - | - | - |
+| - | Th 9/14 | [2.4 Interpreting the Derivative](class-notes/2.4 Interpreting the Derivative.pdf){target="_blank"} | Interpretations of the Derivative<br>[[Handout]](topics/2.4-interpreting-the-derivative/2.4 Interpreting the Derivative.pdf){target="_blank"}<br>[[Desmos]](https://student.desmos.com/activitybuilder/student-greeting/64fe7f73f0257dc5eed274d4){target="_blank"} | - |  | Pgs. 108-110 [CSV] |
 | - | F 9/15 | **Proficiency Quiz<br>L2\* (2nd), L3** | - | Due: Section 2.3 | **Due Lab 1** | - |
-| **4** | M 9/18 | 2.5 Second Derivative | Concavity<br>[[Handout]](topics/2.5-second-derivative/2.5 Concavity.pdf){target="_blank"} | Due: Section 2.4 | - | Pgs. 115-119 [CSV] |
-| - | W 9/20 | 2.6 Differentiability | Differentiability<br>[[Handout]](topics/2.6-differentiability/2.6 Differentiability.pdf){target="_blank"} | Due: Section 2.5 | - | Pgs. 123-126 [CSV] |
+| **4** | M 9/18 | [2.5 Second Derivative](class-notes/2.5 Second Derivative.pdf){target="_blank"} | Concavity<br>[[Handout]](topics/2.5-second-derivative/2.5 Concavity.pdf){target="_blank"} | Due: Section 2.4 | - | Pgs. 115-119 [CSV] |
+| - | W 9/20 | [2.6 Differentiability](class-notes/2.6 Differentiability.pdf){target="_blank"} | Differentiability<br>[[Handout]](topics/2.6-differentiability/2.6 Differentiability.pdf){target="_blank"} | Due: Section 2.5 | - | Pgs. 123-126 [CSV] |
 | - | Th 9/21 | Lab 2: Corona Virus Cases | - | - | Assigned: Lab 2 | - |
 | - | F 9/22 | **Proficiency Quiz<br>D1\*, D2** | - | Due: Section 2.6 | - | - |
-| **5** | M 9/25 | 3.1 Powers and Polynomials | Derivatives of Polynomials<br>[[Handout]](topics/3.1-powers-and-polynomials/3.1 Derivatives of Polynomials.pdf){target="_blank"} | - | - | Pgs. 130-136 [CSV] |
-| - | W 9/27 | Review: Exponent Properties | Exponent and Log Review<br>[[Handout]](topics/3.2.0-review-exponent-properties/3.2.0 Exponent Review.pdf){target="_blank"} | Due: Section 3.1 | - | - |
-| - | Th 9/28 | 3.2 The Exponential Function | Derivatives of Exponential Functions<br>[[Handout]](topics/3.2-the-exponential-function/3.2 Exponential Functions.pdf){target="_blank"} | - | - | Pgs. 140-142 [CSV] |
+| **5** | M 9/25 | [3.1 Powers and Polynomials](class-notes/3.1 Powers and Polynomials.pdf){target="_blank"} | Derivatives of Polynomials<br>[[Handout]](topics/3.1-powers-and-polynomials/3.1 Derivatives of Polynomials.pdf){target="_blank"} | - | - | Pgs. 130-136 [CSV] |
+| - | W 9/27 | [Review: Exponent Properties](class-notes/Review Exponent Properties.pdf){target="_blank"} | Exponent and Log Review<br>[[Handout]](topics/3.2.0-review-exponent-properties/3.2.0 Exponent Review.pdf){target="_blank"} | Due: Section 3.1 | - | - |
+| - | Th 9/28 | [3.2 The Exponential Function](class-notes/3.2 The Exponential Function.pdf){target="_blank"} | Derivatives of Exponential Functions<br>[[Handout]](topics/3.2-the-exponential-function/3.2 Exponential Functions.pdf){target="_blank"} | - | - | Pgs. 140-142 [CSV] |
 | - | F 9/29 | **Proficiency Quiz<br>D1\* (2nd), D3** | - | Due Exponent Review | **Due: Lab 2** | - |
-| **6** | M 10/2 | 3.3 Product and Quotient Rule | Product and Quotient Rules<br>[[Handout]](topics/3.3-product-and-quotient-rule/3.3 Product and Quotient Rules.pdf){target="_blank"} | Due: Section 3.2 | - | Pgs. 144-147 [CSV] |
-| - | W 10/4 | 3.4 Chain Rule | Chain Rule<br>[[Handout]](topics/3.4-chain-rule/3.4 Chain Rule.pdf){target="_blank"} | Due: Section 3.3 | - | Pgs. 151-155 [CSV] |
-| - | Th 10/5 | Review: Trigonometry | Trigonometry Review<br>[[Handout]](topics/3.5.0-review-trigonometry/Trig Review.pdf){target="_blank"} | - | - | - |
+| **6** | M 10/2 | [3.3 Product and Quotient Rule](class-notes/3.3 Product and Quotient Rule.pdf){target="_blank"} | Product and Quotient Rules<br>[[Handout]](topics/3.3-product-and-quotient-rule/3.3 Product and Quotient Rules.pdf){target="_blank"} | Due: Section 3.2 | - | Pgs. 144-147 [CSV] |
+| - | W 10/4 | [3.4 Chain Rule](class-notes/3.4 Chain Rule.pdf){target="_blank"} | Chain Rule<br>[[Handout]](topics/3.4-chain-rule/3.4 Chain Rule.pdf){target="_blank"} | Due: Section 3.3 | - | Pgs. 151-155 [CSV] |
+| - | Th 10/5 | [Review: Trigonometry](class-notes/Review Trigonometry.pdf){target="_blank"} | Trigonometry Review<br>[[Handout]](topics/3.5.0-review-trigonometry/Trig Review.pdf){target="_blank"} | - | - | - |
 | - | F 10/6 | **Proficiency Quiz<br>D4, D5\*** | - | Due: Section 3.4 | - | - |
-| **7** | M 10/9 | 3.5 Trig Functions | Derivatives of Trigonometric Functions<br>[[Handout]](topics/3.5-trig-functions/3.5 Trig Derivatives.pdf){target="_blank"} | Due: Trig Review<br>Due: Inverses Review | - | Pgs. 158-162 [CSV] |
-| - | W 10/11 | 3.6 Inverse Functions | Derivatives of Inverse Functions<br>[[Handout]](topics/3.6-inverse-functions/3.6 Inverse Functions.pdf){target="_blank"} | Due: Section 3.5 | - | Pgs. 164-167 [CSV] |
+| **7** | M 10/9 | [3.5 Trig Functions](class-notes/3.5 Trig Functions.pdf){target="_blank"} | Derivatives of Trigonometric Functions<br>[[Handout]](topics/3.5-trig-functions/3.5 Trig Derivatives.pdf){target="_blank"} | Due: Trig Review<br>Due: Inverses Review | - | Pgs. 158-162 [CSV] |
+| - | W 10/11 | [3.6 Inverse Functions](class-notes/3.6 Inverse Functions){target="_blank"} | Derivatives of Inverse Functions<br>[[Handout]](topics/3.6-inverse-functions/3.6 Inverse Functions.pdf){target="_blank"} | Due: Section 3.5 | - | Pgs. 164-167 [CSV] |
 | - | Th 10/12 | *Canceled* | - | - | Assigned: Lab 3 | - |
 | - | F 10/13 | **Proficiency Quiz<br>D5\* (2nd), D6** | - | Due: Section 3.6 | - | - |
 | **8** | M 10/16 | _Fall Break_ | - | - | - | - |
 | - | W 10/18 | _Fall Break_ | - | - | - | - |
 | - | Th 10/19 | _Fall Break_ | - | - | - | - |
 | - | F 10/20 | _Fall Break_ | - | - | - | - |
-| **9** | M 10/23 | 3.7 Implicit Differentiation | Implicit Differentiation<br>[[Handout]](topics/3.7-implicit-differentiation/3.7 Implicit Differentiation.pdf){target="_blank"} | Due: Derivative Practice | - | Pgs. 171-173 [CSV] |
+| **9** | M 10/23 | [3.7 Implicit Differentiation](class-notes/3.7 Implicit Differentiation.pdf){target="_blank"} | Implicit Differentiation<br>[[Handout]](topics/3.7-implicit-differentiation/3.7 Implicit Differentiation.pdf){target="_blank"} | Due: Derivative Practice | - | Pgs. 171-173 [CSV] |
 | - | W 10/25 | *Mid-semester Reflection* | Informal Student Evaluations of Teaching Survey | Due: Section 3.7 | - | Pgs. 178-182 [CSV] |
-| - | Th 10/26 | 3.9 Linear Approximation | Linear Approximation<br>[[Handout]](topics/3.9-linear-approximation/3.9 Linear Approximation.pdf){target="_blank"} | - | - | Pgs. 192-198 [CSV] |
+| - | Th 10/26 | [3.9 Linear Approximation](class-notes/3.9 Linear Approximation.pdf){target="_blank"} | Linear Approximation<br>[[Handout]](topics/3.9-linear-approximation/3.9 Linear Approximation.pdf){target="_blank"} | - | - | Pgs. 192-198 [CSV] |
 | - | F 10/27 | **Proficiency Quiz<br>D7, D8\*** | - | Due: Section 3.9<br>Due: Section 3.10 (Bonus) | **Due: Lab 3** | - |
 | **10** | M 10/30 | 4.1 Using Derivative | TBA | Due: Section 4.1 | - | Pgs. 203-208 [CSV] |
 | - | W 11/1 | 4.3 Optimization | TBA | - | - | Pgs. 212-218 [CSV] |
