--- a/topics.Rmd
+++ b/topics.Rmd
@@ -86,7 +86,7 @@ create_footer()
 | - | F 11/24 | _Thanksgiving Vacation_ | - | - | - | - |
 | **14** | M 11/27 | 5.3 Fundamental Theorem of Calculus Part 1 | The Fundamental Theorem and Interpretations<br>[[Handout 1]](topics/5.3-fundamental-theorem-of-calculus-part-1/5.3 Warm-up.pdf){target="_blank"}<br>[[Handout 2]](topics/5.3-fundamental-theorem-of-calculus-part-1/5.3 Net Change Theorem.pdf){target="_blank"} | - | - | Pgs. 292-297 [CSV] |
 | - | W 11/29 | 5.4 Theorems About Integrals | Theorems About Definite Integrals<br>[[Handout]](topics/5.4-theorems-about-integrals/5.4 Theorems about Definite Integrals.pdf){target="_blank"} | Due: Section 5.3 | - | Pgs. 302-309 [CSV] |
-| - | Th 11/30 | 6.1 Antiderivatives (Numerically & Graphically) | TBA | - | - | Pgs. 316-317 [CSV] |
+| - | Th 11/30 | 6.1 Antiderivatives (Numerically & Graphically) | Antiderivatives Graphically<br>[[Handout]](topics/6.1-antiderivatives-numerically-and-graphically/6.1 Antiderivatives Graphically.pdf){target="_blank"} | - | - | Pgs. 316-317 [CSV] |
 | - | F 12/1 | **Proficiency Quiz<br>I1, I2\*, I3\*** | - | Due: Section 5.4 | **Due: Lab 5** | - |
 | **15** | M 12/4 | 6.2 Antiderivatives (Analytically) | TBA | Due: Section 6.1<br>Due: Section 6.2 | - | Pgs. 322-326 [CSV] |
 | - | W 12/6 | 6.4 Fundamental Theorem of Calculus Part 2 | TBA | - | - | Pgs. 335-338 [CSV] |
